--- a/Vanilla-JavaScript-Stopwatch/style.css
+++ b/Vanilla-JavaScript-Stopwatch/style.css
@@ -40,7 +40,47 @@ button {
   border: 1.0px solid #f8f8f8;
 }
 
-button:hover {
-  background-color: rgba(0, 0, 0, 0.4);
+button.start {
+  background-color: rgba(7, 128, 7, 0.836);
+  color: #f8f8f8;
+}
+
+button.start:hover{
+  background-color: rgba(7, 183, 7, 0.836);
+  color: #f8f8f8;
+}
+
+button.start:active {
+  background-color: rgba(9, 232, 9, 0.836);
+  color: #f8f8f8;
+}
+
+button.stop {
+  background-color: rgba(155, 6, 6, 0.836);
+  color: #f8f8f8;
+}
+
+button.stop:hover {
+  background-color: rgba(203, 6, 6, 0.836);
+  color: #f8f8f8;
+}
+
+button.stop:active {
+  background-color: rgba(255, 0, 0, 0.836);
+  color: #f8f8f8;
+}
+
+button.reset {
+  background-color: rgba(16, 6, 132, 0.881);
+  color: #f8f8f8;
+}
+
+button.reset:hover {
+  background-color: rgba(5, 5, 243, 0.836);
+  color: #f8f8f8;
+}
+
+button.reset:active {
+  background-color: rgba(5, 210, 237, 0.881);
   color: #f8f8f8;
 }
