--- a/Vanilla-JavaScript-Stopwatch/style.css
+++ b/Vanilla-JavaScript-Stopwatch/style.css
@@ -6,13 +6,14 @@
 body {
   width: 100%;
   height: 100vh;
-  background-image: url("https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-image: url("https://betsoftware.com/wp-content/uploads/sites/4/2022/02/The-Phases-of-a-Software-Development-Life-Cycle-scaled.jpg");
   background-position: center;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  transform: translate(10%,5%);
 }
 
 .container {
@@ -22,6 +23,7 @@ body {
   position: relative;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.6);
+  transform: translate(-170%,-50%);
 }
 
 .time {
